[gd_scene load_steps=4 format=3 uid="uid://bcxcd35hwunlr"]

[ext_resource type="PackedScene" uid="uid://v85vo50ygk8b" path="res://Scenes/Laser/Laser.tscn" id="1_nqmk8"]
[ext_resource type="Script" uid="uid://d0x84x4t67tnh" path="res://Scenes/Pipes/Pipes.gd" id="1_u8oov"]
[ext_resource type="PackedScene" uid="uid://dlb6lbwwk68s6" path="res://Scenes/Pipe/Pipe.tscn" id="2_u8oov"]

[node name="Pipes" type="Node2D"]
script = ExtResource("1_u8oov")

[node name="Laser" parent="." instance=ExtResource("1_nqmk8")]

[node name="Lower" parent="." instance=ExtResource("2_u8oov")]
position = Vector2(0, 80)

[node name="Upper" parent="." instance=ExtResource("2_u8oov")]
position = Vector2(0, -80)
rotation = 3.14159

[connection signal="body_entered" from="Laser" to="." method="_on_laser_body_entered"]
[connection signal="body_entered" from="Lower" to="." method="_on_pipe_body_entered"]
[connection signal="body_entered" from="Upper" to="." method="_on_pipe_body_entered"]
